Added documentation to notebook

--- a/notebooks/Visualize GMMs from CNprep.html
+++ b/notebooks/Visualize GMMs from CNprep.html
@@ -14634,7 +14634,7 @@ kQgR5P8BLGgvX9AYmj8AAAAASUVORK5CYII="
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Display-GMM-for-mclust-model-E,-minjoin-=-1.00,-ntrial-=-10">Display GMM for mclust model E, minjoin = 1.00, ntrial = 10<a class="anchor-link" href="#Display-GMM-for-mclust-model-E,-minjoin-=-1.00,-ntrial-=-10">&#182;</a></h3><p>Here, we are running the GMM model using the mclust model "E", which is fitting Gaussian components with equal variance. We also using a high minjoin of 1.00 to avoid joining clusters. The GMM is very similar to smaller minjoin runs, although there are instances of extra components.</p>
+<h3 id="Display-GMM-for-mclust-model-E,-minjoin-=-1.00,-ntrial-=-10">Display GMM for mclust model E, minjoin = 1.00, ntrial = 10<a class="anchor-link" href="#Display-GMM-for-mclust-model-E,-minjoin-=-1.00,-ntrial-=-10">&#182;</a></h3><p>Here, we are running the GMM model using the mclust model "E", which is fitting Gaussian components with equal variance. We also using a high minjoin of 1.00 to avoid joining clusters. The GMM is very similar to smaller minjoin runs, although there are instances of extra components. The component added seems reasonable to include.</p>
 
 </div>
 </div>
