--- a/notebooks/Visualize TCGA FACETS Profile.html
+++ b/notebooks/Visualize TCGA FACETS Profile.html
@@ -11830,6 +11830,18 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Visualize-FACETS-profiles">Visualize FACETS profiles<a class="anchor-link" href="#Visualize-FACETS-profiles">&#182;</a></h2><p>Below, we see that the logOR values are much more noisy in the non-matching pairs compared to the matching pair. This was expected since the tumor &amp; normal sequence was not measured from the same patient, therefore having different SNP profiles.</p>
+<p>The inaccuracy in the logOR can effect downstream FACETS analysis such as segmentation, segmentation clustering, integer copy number calling, estimation of purity/ploidy/heterogeneity.</p>
+<p>We will review the logR values in the following notebooks: "Visualize CORE TCGA Results" and "Visualize TCGA Variation".</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Visualization-for-tumorId=1">Visualization for tumorId=1<a class="anchor-link" href="#Visualization-for-tumorId=1">&#182;</a></h3>
 </div>
 </div>
