--- a/notebooks/Visualize TCGA Variation.html
+++ b/notebooks/Visualize TCGA Variation.html
@@ -15939,7 +15939,7 @@ YII="
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Visualize-RMSE-of-SNP-and-segments-for-all-tumors">Visualize RMSE of SNP and segments for all tumors<a class="anchor-link" href="#Visualize-RMSE-of-SNP-and-segments-for-all-tumors">&#182;</a></h3><p>The RMSE between SNPs average around 0.40 (compared to an average SD of 0.30). The increased RMSE from SD indicates some bias from the non-matching samples, which is expected.</p>
 <p>The RMSE between segments average around 0.07 (compared to an average SD of 0.05). The increased RMSE from SD also indicates bias from the non-matching samples, which is also expected.</p>
-<p>Again, considering that our current FACETS threshold for calling events are 0.2 for amplifications and -0.23 for deletions, an average RMSE of 0.07 is likely to cause false positives and false negatives.</p>
+<p>Again, considering that our current FACETS threshold for calling events are 0.2 for amplifications and -0.23 for deletions, an average RMSE of 0.07 is likely to cause false positives and false negatives. However, we may be able to reduce FP and FN in new analysis cases by using the bias/variation from the TCGA dataset to determine new event cutoff values that minimize the FP and FN rate (which can be treated as statistical learning in some regard).</p>
 <p>NOTE: It is interesting to compare these variation plot with the CN Profile and CORE visualization in the "Visualize CORES of FACETS results on TCGA dataset" notebook. We can see how minor variations in the data can still cause FP and FN, yet major variations will have the same call due to its nuetrality.</p>
 
 </div>
