Organization visualization script - made notebooks

--- a/notebooks/Visualize GMMs from CNprep.html
+++ b/notebooks/Visualize GMMs from CNprep.html
@@ -11797,15 +11797,13 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Display-GMM-for-mclust-model-E,-minjoin-=-0.25,-mintrial-=-10">Display GMM for mclust model E, minjoin = 0.25, mintrial = 10<a class="anchor-link" href="#Display-GMM-for-mclust-model-E,-minjoin-=-0.25,-mintrial-=-10">&#182;</a></h3><p>We are using the default GMM parameters: mclust model E, minjoin 0.25, ntrial 10, etc.</p>
-<p>The GMM model performs well. Only issue is the potentially misclassification of the segments at logR = ~2. Potentially by increasing minjoin or using the mclust V model, we can fix this.</p>
-
+<h3 id="View-segment-input-histogram">View segment input histogram<a class="anchor-link" href="#View-segment-input-histogram">&#182;</a></h3>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="prompt input_prompt">In&nbsp;[23]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-r"><pre><span></span><span class="kr">for</span><span class="p">(</span>sample <span class="kr">in</span> sample_list<span class="p">){</span>
@@ -12624,6 +12622,17 @@ yXFGGENynBHGkBxnhPn/z6rZJNAXK7IAAAAASUVORK5CYII="
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Display-GMM-for-mclust-model-E,-minjoin-=-0.25,-mintrial-=-10">Display GMM for mclust model E, minjoin = 0.25, mintrial = 10<a class="anchor-link" href="#Display-GMM-for-mclust-model-E,-minjoin-=-0.25,-mintrial-=-10">&#182;</a></h3><p>We are using the default GMM parameters: mclust model E, minjoin 0.25, ntrial 10, etc.</p>
+<p>The GMM model performs well. Only issue is the potentially misclassification of the segments at logR = ~2. Potentially by increasing minjoin or using the mclust V model, we can fix this.</p>
+
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
